--- a/src/pages/Product/ui/product.css
+++ b/src/pages/Product/ui/product.css
@@ -71,9 +71,6 @@
     flex-direction: column;
     align-items: center;
   }
-  .form-product .form__form > div {
-    flex-direction: column;
-  }
 }
 
 @media (max-width: 1000px) {
@@ -83,6 +80,10 @@
 }
 
 @media (max-width: 767px) {
+  .form-product .form__form > div {
+    flex-direction: column;
+    gap: 10px;
+  }
   .product,
   .communicate {
     gap: 20px;
